# discord-telegram-chat-assistant

./: .version  CMakeLists.txt  README.md  config.json
discord-telegram-chat-assistant/: .env.example  requirements.txt
discord-telegram-chat-assistant/src/: ai_handler.py  config.py  discord_bot.py  main.py  telegram_bot.py
discord-telegram-chat-assistant/tests/: test_ai_handler.py
src/: bot.cpp  bot.hpp  config.cpp  config.hpp  main.cpp
tests/: test_bot.cpp
